--- a/collated/main/A0163673Y.md
+++ b/collated/main/A0163673Y.md
@@ -32,12 +32,21 @@ public class TaskListStoragePathChangedEvent extends BaseEvent {
 
         Description updatedDescription = editTaskDescriptor.getDescription().orElseGet(taskToEdit::getDescription);
         UniqueTagList updatedTags = editTaskDescriptor.getTags().orElseGet(taskToEdit::getTags);
-        DueDate updatedDueDate = editTaskDescriptor.getDueDate().orElseGet(taskToEdit::getDueDate);
+        DueDate updatedDueDate = getUpdatedDueDate(editTaskDescriptor, taskToEdit);
+        Duration updatedDuration = getUpdatedDuration(editTaskDescriptor, taskToEdit);
+        Complete updatedComplete = taskToEdit.getComplete();
+        TaskId originalId = taskToEdit.getTaskId();
+
+        return new Task(updatedDescription, updatedDueDate, updatedDuration, updatedTags, updatedComplete, originalId);
+    }
+
+    // helper method to get the appropriate updated duration
+    private static Duration getUpdatedDuration(EditTaskDescriptor editTaskDescriptor,
+            ReadOnlyTask taskToEdit) throws CommandException {
+
         String updatedDurationStart = editTaskDescriptor.getDurationStart().orElseGet(taskToEdit::getDurationStart);
         String updatedDurationEnd = editTaskDescriptor.getDurationEnd().orElseGet(taskToEdit::getDurationEnd);
         Duration updatedDuration = taskToEdit.getDuration();
-        Complete updatedComplete = taskToEdit.getComplete();
-        TaskId originalId = taskToEdit.getTaskId();
 
         try {
             // ensure that there must be start and end date if editing a non existing duration
@@ -52,17 +61,24 @@ public class TaskListStoragePathChangedEvent extends BaseEvent {
             throw new CommandException(e.getMessage());
         }
 
-        // delete due date from task
-        if (editTaskDescriptor.deleteDueDate) {
-            updatedDueDate = null;
-        }
-
         // delete duration from task
         if (editTaskDescriptor.deleteDuration) {
             updatedDuration = null;
         }
 
-        return new Task(updatedDescription, updatedDueDate, updatedDuration, updatedTags, updatedComplete, originalId);
+        return updatedDuration;
+    }
+
+    // helper method to get the appropriate updated due date
+    private static DueDate getUpdatedDueDate(EditTaskDescriptor editTaskDescriptor, ReadOnlyTask taskToEdit) {
+        DueDate updatedDueDate = editTaskDescriptor.getDueDate().orElseGet(taskToEdit::getDueDate);
+
+        // delete due date from task
+        if (editTaskDescriptor.deleteDueDate) {
+            updatedDueDate = null;
+        }
+
+        return updatedDueDate;
     }
 ```
 ###### /java/seedu/task/logic/commands/EditCommand.java
@@ -293,23 +309,8 @@ public class SetStorageCommand extends Command {
         try {
             editTaskDescriptor.setDescription(ParserUtil.parseDescription(preambleFields.get(1)));
             editTaskDescriptor.setTags(parseTagsForEdit(ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG))));
-            // handle parsing of due date
-            if (argsTokenizer.getValue(PREFIX_DUEDATE).isPresent()
-                    && argsTokenizer.getValue(PREFIX_DUEDATE).get().equals(EMPTY_STRING)) {
-                editTaskDescriptor.setDeleteDueDate(true);
-            } else {
-                editTaskDescriptor.setDueDate(ParserUtil.parseDueDate(argsTokenizer.getValue(PREFIX_DUEDATE)));
-            }
-            // handle parsing of duration
-            if (argsTokenizer.getValue(PREFIX_START).isPresent()
-                    && argsTokenizer.getValue(PREFIX_END).isPresent()
-                    && argsTokenizer.getValue(PREFIX_START).get().equals(EMPTY_STRING)
-                    && argsTokenizer.getValue(PREFIX_END).get().equals(EMPTY_STRING)) {
-                editTaskDescriptor.setDeleteDuration(true);
-            } else {
-                editTaskDescriptor.setDurationStart(ParserUtil.parseString(argsTokenizer.getValue(PREFIX_START)));
-                editTaskDescriptor.setDurationEnd(ParserUtil.parseString(argsTokenizer.getValue(PREFIX_END)));
-            }
+            editTaskDescriptor = parseDueDate(editTaskDescriptor, argsTokenizer);
+            editTaskDescriptor = parseDuration(editTaskDescriptor, argsTokenizer);
         } catch (IllegalValueException ive) {
             return new IncorrectCommand(ive.getMessage());
         }
@@ -319,6 +320,33 @@ public class SetStorageCommand extends Command {
         }
 
         return new EditCommand(index.get(), editTaskDescriptor);
+    }
+
+    // helper method to handle parsing of due date
+    private EditTaskDescriptor parseDueDate(EditTaskDescriptor editTaskDescriptor,
+            ArgumentTokenizer argsTokenizer) throws IllegalValueException {
+        if (argsTokenizer.getValue(PREFIX_DUEDATE).isPresent()
+                && argsTokenizer.getValue(PREFIX_DUEDATE).get().equals(EMPTY_STRING)) {
+            editTaskDescriptor.setDeleteDueDate(true);
+        } else {
+            editTaskDescriptor.setDueDate(ParserUtil.parseDueDate(argsTokenizer.getValue(PREFIX_DUEDATE)));
+        }
+        return editTaskDescriptor;
+    }
+
+    //helper method to handle parsing of duration
+    private EditTaskDescriptor parseDuration(EditTaskDescriptor editTaskDescriptor,
+            ArgumentTokenizer argsTokenizer) throws IllegalValueException {
+        if (argsTokenizer.getValue(PREFIX_START).isPresent()
+                && argsTokenizer.getValue(PREFIX_END).isPresent()
+                && argsTokenizer.getValue(PREFIX_START).get().equals(EMPTY_STRING)
+                && argsTokenizer.getValue(PREFIX_END).get().equals(EMPTY_STRING)) {
+            editTaskDescriptor.setDeleteDuration(true);
+        } else {
+            editTaskDescriptor.setDurationStart(ParserUtil.parseString(argsTokenizer.getValue(PREFIX_START)));
+            editTaskDescriptor.setDurationEnd(ParserUtil.parseString(argsTokenizer.getValue(PREFIX_END)));
+        }
+        return editTaskDescriptor;
     }
 ```
 ###### /java/seedu/task/logic/parser/ParserUtil.java
@@ -488,6 +516,9 @@ public class StorageCommandParser {
 ```
 ###### /java/seedu/task/ui/TaskCard.java
 ``` java
+/**
+ * Class for handling the task card UI component.
+ */
 public class TaskCard extends UiPart<Region> {
 
     private static final String FXML = "TaskListCard.fxml";
