--- a/collated/test/A0164103W.md
+++ b/collated/test/A0164103W.md
@@ -70,6 +70,20 @@ public class UndoCommandTest extends TaskListGuiTest {
 
 }
 ```
+###### /java/seedu/task/testutil/TaskBuilder.java
+``` java
+    public TaskBuilder withDueDate(String dueDate) throws IllegalValueException {
+        this.task.setDueDate(new DueDate(dueDate));
+        return this;
+    }
+```
+###### /java/seedu/task/testutil/TaskBuilder.java
+``` java
+    public TaskBuilder withTaskId(long id) throws IllegalValueException {
+        this.task.setTaskId(new TaskId(id));
+        return this;
+    }
+```
 ###### /java/seedu/task/testutil/TestTask.java
 ``` java
     public void setDueDate(DueDate dueDate) {
