--- a/collated/main/A0147620L.md
+++ b/collated/main/A0147620L.md
@@ -25,21 +25,6 @@ public class History<S> {
         return history.add(state);
     }
 
-
-    /**
-     * Method that returns the previous state entered by user
-     * Return null if history is empty
-     */
-    public S getPreviousState() {
-        try {
-            S previousState = history.pop();
-            overflow.push(previousState);
-            return previousState;
-        } catch (EmptyStackException e) {
-            return null;
-        }
-    }
-
 ```
 ###### \java\seedu\doist\logic\commands\AddCommand.java
 ``` java
@@ -909,18 +894,6 @@ public class StringMatchUtil {
 ```
 ###### \java\seedu\doist\ui\CommandBox.java
 ``` java
-    @FXML
-    private void handleKeyPressed(KeyEvent event) {
-        if (navigationMode) {
-            handleKeyPressedInNavigationMode(event);
-        } else {
-            handleKeyPressedInEditingMode(event);
-        }
-    }
-
-```
-###### \java\seedu\doist\ui\CommandBox.java
-``` java
     //Handles Down key press
     private void handleDownKey() {
         String userCommandText = commandHistory.getNextState();
@@ -1019,7 +992,7 @@ public class StringMatchUtil {
      * Method to provide auto-complete suggestions for search
      * @param words
      * @param logic
-     * @return list of strings that represent possible autocomplete matches
+     * @return list of strings that represent possible auto-complete matches
      */
     private ArrayList<String> getSuggestionsForSearch(String[] words, Logic logic) {
         int count = 0;
