--- a/collated/test/A0147980U.md
+++ b/collated/test/A0147980U.md
@@ -18,14 +18,14 @@ public class AliasCommandTest extends DoistGUITest {
     public void testCommandWordNotSpecified() {
         commandBox.runCommand("alias a");
         assertResultMessage(String.format(AliasCommandParser.MESSAGE_COMMAND_WORD_NOT_SPECIFIED,
-                AliasCommand.MESSAGE_USAGE));
+                            AliasCommand.MESSAGE_USAGE));
     }
 
     @Test
     public void testInputAliasFormatInvalid() {
         commandBox.runCommand("alias add a task \\for add");
         assertResultMessage(String.format(AliasCommandParser.MESSAGE_ALIAS_FORMAT_INVALID,
-                AliasCommand.MESSAGE_USAGE));
+                            AliasCommand.MESSAGE_USAGE));
     }
 
     @Test
@@ -52,27 +52,28 @@ public class CommandHighlightTests extends DoistGUITest {
     @Test
     public void testCorrectHighlightWithCompleteCommands() {
         String input = "do a new task \\from today \\to tomorrow \\as important \\under work";
-        commandBox.enterCommand(input);
-        assertCorrectHighlight();
+        assertCorrectHighlightAfterInput(input);
     }
 
     @Test
     public void testCorrectHighlightWithIncorrectTimeKey() {
         String input = "do a new task \\frm today \\too tomorrow \\as important \\under work";
-        commandBox.enterCommand(input);
-        assertCorrectHighlight();
+        assertCorrectHighlightAfterInput(input);
     }
 
     @Test
     public void testCorrectHighlightWithEmptyCommand() {
         String input = "";
-        commandBox.enterCommand(input);
-        assertCorrectHighlight();
+        assertCorrectHighlightAfterInput(input);
     }
 
     @Test
     public void testCorrectHighlightWithKeyEnd() {
         String input = "add a task \by";
+        assertCorrectHighlightAfterInput(input);
+    }
+
+    private void assertCorrectHighlightAfterInput(String input) {
         commandBox.enterCommand(input);
         assertCorrectHighlight();
     }
@@ -118,21 +119,45 @@ public class ContentAssistTests extends DoistGUITest {
     }
 
     @Test
-    public void testCompleteByTappingTab() {
+    public void testCompleteCommandWordByTappingTab() {
         String input = "view_alia";
-        commandBox.enterCommand(input);
-        bot.type(KeyCode.TAB);
+        typeTabAfterInput(input);
         assertTrue("view_alias".equals(commandBox.getCommandInput()));
     }
 
     @Test
     public void testCompleteKeyByTappingTab() {
         String input = "do task \\unde";
-        commandBox.enterCommand(input);
-        bot.type(KeyCode.TAB);
+        typeTabAfterInput(input);
         assertTrue("do task \\under".equals(commandBox.getCommandInput()));
     }
 
+    @Test
+    public void testCompleteUnexistedCommandword() {
+        String input = "z";  // there is no command word starting with the letter 'z'
+        typeTabAfterInput(input);
+        assertTrue("z".equals(commandBox.getCommandInput()));
+    }
+
+    @Test
+    public void testCompleteUnexistedKey() {
+        String input = "do test \\z";  // there is no parameter key starting with the letter 'z'
+        typeTabAfterInput(input);
+        assertTrue("do test \\z".equals(commandBox.getCommandInput()));
+    }
+
+    @Test
+    public void testCompleteSingleBackslash() {
+        String input = "do test \\";
+        typeTabAfterInput(input);
+        String content = commandBox.getCommandInput();
+        assertTrue(content.charAt(content.length() - 1) != '\\');
+    }
+
+    private void typeTabAfterInput(String input) {
+        commandBox.enterCommand(input);
+        bot.type(KeyCode.TAB);
+    }
     private void correctSuggestionsDisplayedWhenEnter(String input, String lastWord) {
         commandBox.enterCommand(input);
         assertCorrectSuggestions(lastWord);
@@ -436,124 +461,6 @@ public class ListCommandTest extends DoistGUITest {
             assertTrue(!task.getFinishedStatus().getIsFinished() && !task.getDates().isPast());
         }
     }
-```
-###### \java\guitests\ModeTest.java
-``` java
-public class ModeTest extends DoistGUITest {
-
-    @Test
-    public void testEditingModeAfterLaunch() {
-        assertInEditingMode();
-    }
-
-    @Test
-    public void testTurnOnNavigationMode() {
-        typeEsc();
-        assertInNavigationMode();
-    }
-
-    @Test
-    public void testTurnOnNavigationModeThenTurnOnEditingMode() {
-        typeEsc();
-        assertInNavigationMode();
-
-        typeEsc();
-        assert getMessageBoxContent().equals(CommandBox.EDITING_MODE_MESSAGE);
-        assertInEditingMode();
-    }
-
-    @Test
-    public void testStartingFromIndexZero() {
-        typeEsc();  // turn on navigation mode
-        typeJ();
-        assertTaskSelected(1);
-    }
-
-    @Test
-    public void testPressJToScrollDown() {
-        typeEsc();
-        int count = taskListPanel.getNumberOfTasks();
-        for (int i = 0; i < count; i++) {
-            typeJ();
-            assertTaskSelected(i + 1);
-        }
-
-        // already scroll to the bottom
-        typeJ();
-        assertTaskSelected(count);
-    }
-
-    @Test
-    public void testPressKToScrollUp() {
-        testPressJToScrollDown();
-        int count = taskListPanel.getNumberOfTasks();
-        for (int i = count - 1; i >= 1; i--) {
-            typeK();
-            assertTaskSelected(i);
-        }
-
-        // already scroll to the top
-        typeK();
-        assertTaskSelected(1);
-    }
-
-    // helper method for testing
-    private void assertInNavigationMode() {
-        assert getMessageBoxContent().equals(CommandBox.NAVIGATION_MODE_MESSAGE);
-        commandBox.enterCommand("some random input");
-        System.out.println(getInputBoxContent());
-        assert getInputBoxContent().length() == 0;
-    }
-
-    private void assertInEditingMode() {
-        assert !getMessageBoxContent().equals(CommandBox.NAVIGATION_MODE_MESSAGE);
-        String input = "some randome input";
-        commandBox.enterCommand(input);
-        assert getInputBoxContent().equals(input);
-    }
-
-    private String getInputBoxContent() {
-        return commandBox.getCommandInput();
-    }
-
-    private String getMessageBoxContent() {
-        return resultDisplay.getText();
-    }
-
-    private void typeEsc() {
-        GuiRobot bot = new GuiRobot();
-        bot.press(KeyCode.ESCAPE);
-        bot.release(KeyCode.ESCAPE);
-    }
-
-    private void typeJ() {
-        GuiRobot bot = new GuiRobot();
-        bot.press(KeyCode.J);
-        bot.release(KeyCode.J);
-    }
-
-    private void typeK() {
-        GuiRobot bot = new GuiRobot();
-        bot.press(KeyCode.K);
-        bot.release(KeyCode.K);
-    }
-
-    private void assertTaskSelected(int index) {
-        assertEquals(taskListPanel.getSelectedTasks().size(), 1);
-        ReadOnlyTask selectedTask = taskListPanel.getSelectedTasks().get(0);
-        assertEquals(taskListPanel.getTask(index - 1), selectedTask);
-    }
-}
-
-
-
-
-
-
-
-
-
-
 ```
 ###### \java\guitests\ModeTest.java
 ``` java
