--- a/collated/main/A0147980U.md
+++ b/collated/main/A0147980U.md
@@ -210,7 +210,6 @@ public class DeleteCommand extends Command {
 ```
 ###### \java\seedu\doist\logic\commands\ListCommand.java
 ``` java
-
     public static String getSuccessMessageListUnder(String messageSuccess, UniqueTagList tagList) {
         String message = messageSuccess + " under: ";
         for (Tag tag : tagList) {
@@ -220,6 +219,15 @@ public class DeleteCommand extends Command {
         return message;
     }
 }
+
+
+
+
+
+
+
+
+
 ```
 ###### \java\seedu\doist\logic\commands\RedoCommand.java
 ``` java
@@ -996,6 +1004,14 @@ public class RemoveAliasCommandParser {
 ```
 ###### \java\seedu\doist\ui\CommandBox.java
 ``` java
+    @FXML
+    private void handleKeyPressed(KeyEvent event) {
+        if (navigationMode) {
+            handleKeyPressedInNavigationMode(event);
+        } else {
+            handleKeyPressedInEditingMode(event);
+        }
+    }
 
     private void handleKeyPressedInNavigationMode(KeyEvent event) {
         event.consume();
@@ -1135,7 +1151,9 @@ public class CommandAutoCompleteController {
         return instance;
     }
 
-    // get the list of suggestions according to the input then display it
+    /**
+     * get the list of suggestions according to the input then display it
+     */
     public void suggestCompletion(InlineCssTextArea commandTextField, Logic logic) {
         attachSuggestionWindowIfNecessary(commandTextField);
 
@@ -1217,40 +1235,64 @@ public class CommandHighlightController {
 
     public void highlight(InlineCssTextArea commandTextField) {
         String content = commandTextField.getText();
-        int i = 0;
-        while (i < content.length() && content.charAt(i) != ' ') {
-            commandTextField.setStyle(i, i + 1, COMMAND_WORD_STYLE);
-            i++;
+        int position = 0;
+
+        // highlight command word, which is the start of a command
+        while (position < content.length() && content.charAt(position) != ' ') {
+            commandTextField.setStyle(position, position + 1, COMMAND_WORD_STYLE);
+            position++;
         }
+
+        // highlight the following parameters, which are key-value pairs
         String key = "";
-        while (i < content.length()) {
-            if (content.charAt(i) == '\\') {
+        while (position < content.length()) {
+            if (content.charAt(position) == '\\') {
                 StringBuilder keyBuilder = new StringBuilder();
-                while (i < content.length() && content.charAt(i) != ' ') {
-                    commandTextField.setStyle(i, i + 1, PARAMETER_KEY_STYLE);
-                    keyBuilder.append(content.charAt(i));
-                    i++;
+                while (position < content.length() && content.charAt(position) != ' ') {
+                    commandTextField.setStyle(position, position + 1, PARAMETER_KEY_STYLE);
+                    keyBuilder.append(content.charAt(position));
+                    position++;
                 }
                 key = keyBuilder.toString();
             }
-            if (i >= content.length()) {
+            if (position >= content.length()) {
                 break;
             }
-            if (key.equals(PREFIX_BY.toString()) ||
-                key.equals(PREFIX_FROM.toString()) ||
-                key.equals(PREFIX_TO.toString())) {
-                commandTextField.setStyle(i, i + 1, TIME_VALUE_STYLE);
-            } else if (key.equals(PREFIX_AS.toString())) {
-                commandTextField.setStyle(i, i + 1, PRIORITY_VALUE_STYLE);
-            } else if (key.equals(PREFIX_UNDER.toString())) {
-                commandTextField.setStyle(i, i + 1, TAGS_STYLE);
-            } else {
-                commandTextField.setStyle(i, i + 1, NORMAL_STYLE);
-            }
-            i++;
+
+            highlightCharacterOfParameterValue(position, key, commandTextField);
+            position++;
         }
     }
+
+    /**
+     * highlight a single character inside a "value" string paired up with the input "key"
+     * @param position  the position at which the character to be highlighted
+     * @param key       the closest parameter key before this character
+     * @param commandTextField
+     */
+    private void highlightCharacterOfParameterValue(int position, String key, InlineCssTextArea commandTextField) {
+        if (isTimeRelatedKey(key)) {
+            commandTextField.setStyle(position, position + 1, TIME_VALUE_STYLE);
+        } else if (key.equals(PREFIX_AS.toString())) {
+            commandTextField.setStyle(position, position + 1, PRIORITY_VALUE_STYLE);
+        } else if (key.equals(PREFIX_UNDER.toString())) {
+            commandTextField.setStyle(position, position + 1, TAGS_STYLE);
+        } else {
+            commandTextField.setStyle(position, position + 1, NORMAL_STYLE);
+        }
+    }
+
+    private boolean isTimeRelatedKey(String key) {
+        return key.equals(PREFIX_BY.toString()) ||
+               key.equals(PREFIX_FROM.toString()) ||
+               key.equals(PREFIX_TO.toString());
+    }
 }
+
+
+
+
+
 ```
 ###### \java\seedu\doist\ui\util\ContentAssistPopupWindow.java
 ``` java
