--- a/collated/main/A0139177W.md
+++ b/collated/main/A0139177W.md
@@ -222,11 +222,11 @@ public class SelectCommand extends Command {
                 // Update start date
                 String startDateInString = task.getStartDate().value;
                 String startDate = updateDate(recurringInterval, startDateInString);
-                
+
                 // Update due date
                 String dueDateInString = task.getDueDate().value;
                 String dueDate = updateDate(recurringInterval, dueDateInString);
-                
+
                 // Add updated task to UniqueTaskList.
                 tasks.add(new Task(task.getName(), task.getPriority(), new StartDate(startDate),
                         new DueDate(dueDate), task.getRecur(), task.getTags()));
@@ -638,7 +638,8 @@ public class TaskCard extends UiPart<Region> {
                 startDate.setStyle(cssColor);
             }
         } catch (ParseException pe) {
-            pe.printStackTrace();
+            // Do nothing as the date is optional
+            // and cannot be parsed as Date object.
         }
     }
 
@@ -676,7 +677,8 @@ public class TaskCard extends UiPart<Region> {
                 dueDate.setStyle(cssColor);
             }
         } catch (ParseException pe) {
-            pe.printStackTrace();
+            // Do nothing as the date is optional
+            // and cannot be parsed as Date object.
         }
     }
 
@@ -695,7 +697,8 @@ public class TaskCard extends UiPart<Region> {
                 dueDate.setStyle(cssColor);
             }
         } catch (ParseException pe) {
-            pe.printStackTrace();
+            // Do nothing as the date is optional
+            // and cannot be parsed as Date object.
         }
     }
 
@@ -757,10 +760,6 @@ public class TaskCard extends UiPart<Region> {
     }
 }
 ```
-###### \java\seedu\ezdo\ui\TaskCard.java
-``` java
-
-```
 ###### \java\seedu\ezdo\ui\TaskCardHeader.java
 ``` java
 /**
@@ -781,10 +780,6 @@ public class TaskCardHeader extends UiPart<Region> {
     }
 
 }
-```
-###### \java\seedu\ezdo\ui\TaskCardHeader.java
-``` java
-
 ```
 ###### \resources\view\DarkTheme.css
 ``` css
