--- a/collated/main/A0139248X.md
+++ b/collated/main/A0139248X.md
@@ -43,6 +43,7 @@ import seedu.ezdo.commons.events.BaseEvent;
  */
 public class EzDoDirectoryChangedEvent extends BaseEvent {
 
+    private static final String UPDATE_DIRECTORY = "New save directory: ";
     private String path;
 
     public EzDoDirectoryChangedEvent(String path) {
@@ -55,7 +56,7 @@ public class EzDoDirectoryChangedEvent extends BaseEvent {
 
     @Override
     public String toString() {
-        return "New save directory: " + path;
+        return UPDATE_DIRECTORY + path;
     }
 }
 ```
@@ -99,7 +100,8 @@ public class DateUtil {
         SimpleDateFormat df = new SimpleDateFormat(COMPARE_DATE_STRINGS_ACCEPTED_FORMAT);
         Date startDate = df.parse(taskStartDate);
         Date dueDate = df.parse(taskDueDate);
-        return (startDate.compareTo(dueDate) <= 0);
+        final boolean isStartBeforeDue = startDate.compareTo(dueDate) <= 0;
+        return isStartBeforeDue;
     }
 
 
@@ -122,9 +124,31 @@ public class MultipleIndexCommandUtil {
     /** checks if the indexes specified are all smaller than the size of the list and not 0 i.e. valid */
     public static boolean isIndexValid(UnmodifiableObservableList<ReadOnlyTask> lastShownList,
             ArrayList<Integer> targetIndexes) {
-        return targetIndexes.stream().allMatch(index -> index <= lastShownList.size() && index != 0);
+        return targetIndexes.stream()
+                .allMatch(index -> index <= lastShownList.size() && index != 0);
     }
 
+```
+###### \java\seedu\ezdo\commons\util\MultipleIndexCommandUtil.java
+``` java
+    /** adds read only tasks from the unmodifiable observable list to the ArrayList list */
+    public static void addReadOnlyTasksToList(ArrayList<ReadOnlyTask> list,
+            UnmodifiableObservableList<ReadOnlyTask> lastShownList, ArrayList<Integer> targetIndexes) {
+        for (int i = 0; i < targetIndexes.size(); i++) {
+            ReadOnlyTask readOnlyTask = lastShownList.get(targetIndexes.get(i) - 1);
+            list.add(readOnlyTask);
+        }
+    }
+
+    /** adds tasks from the unmodifiable observable list to the ArrayList list */
+    public static void addTasksToList(ArrayList<Task> list,
+            UnmodifiableObservableList<ReadOnlyTask> lastShownList, ArrayList<Integer> targetIndexes) {
+        for (int i = 0; i < targetIndexes.size(); i++) {
+            Task task = (Task) lastShownList.get(targetIndexes.get(i) - 1);
+            list.add(task);
+        }
+    }
+}
 ```
 ###### \java\seedu\ezdo\logic\commands\AddCommand.java
 ``` java
