added collate and sampledata

--- a/collated/main/A0139872R.md
+++ b/collated/main/A0139872R.md
@@ -1,4 +1,49 @@
 # A0139872R
+###### \java\seedu\watodo\logic\commands\EditCommand.java
+``` java
+    /**
+     * Creates and returns a {@code Task} with the details of {@code taskToEdit}
+     * edited with {@code editTaskDescriptor}.
+     */
+    private static Task createEditedTask(ReadOnlyTask taskToEdit, EditTaskDescriptor editTaskDescriptor,
+                                         boolean hasEditDate, boolean hasRemoveDate) {
+        assert taskToEdit != null;
+
+        Description updatedName = editTaskDescriptor.getTaskName().orElseGet(taskToEdit::getDescription);
+        TaskStatus updatedStatus = taskToEdit.getStatus();
+
+        UniqueTagList updatedTags = new UniqueTagList();
+        if (!editTaskDescriptor.getTags().isPresent()) {
+            updatedTags = taskToEdit.getTags();
+        } else {
+            updatedTags = editTaskDescriptor.getTags().get();
+            UniqueTagList existingTags = taskToEdit.getTags();
+            for (Iterator<Tag> iterator = updatedTags.iterator(); iterator.hasNext();) {
+                Tag tag = iterator.next();
+                if (existingTags.contains(tag)) {
+                    iterator.remove();
+                    existingTags.remove(tag);
+                }
+            }
+            updatedTags.mergeFrom(existingTags);
+        }
+
+        if (hasRemoveDate) {
+            return new Task(updatedName, null, null, updatedTags, updatedStatus);
+        }
+        DateTime startDate;
+        DateTime endDate;
+        if (!hasEditDate) {
+            startDate = taskToEdit.getStartDate();
+            endDate = taskToEdit.getEndDate();
+        } else {
+            startDate = editTaskDescriptor.getStartDate().orElse(null);
+            endDate = editTaskDescriptor.getEndDate().get();
+        }
+        return new Task(updatedName, startDate, endDate, updatedTags, updatedStatus);
+    }
+
+```
 ###### \java\seedu\watodo\logic\commands\ListCommand.java
 ``` java
 /**
@@ -63,14 +108,13 @@ public class ListDateCommand extends ListCommand {
     DateTime end = null;
 
     public ListDateCommand(Optional<String> startDate, Optional<String> endDate) throws IllegalValueException {
-        assert startDate != null || endDate != null;
-        if (startDate != null) {
+        assert endDate.isPresent();
+        if (startDate.isPresent()) {
             this.start = new DateTime(startDate.get());
         }
-        if (endDate != null) {
-            this.end = new DateTime(endDate.get());
-        }
-        if (startDate != null && endDate != null) {
+        this.end = new DateTime(endDate.get());
+
+        if (startDate.isPresent() && endDate.isPresent()) {
             if (start.isLater(end)) { //checks if the end time is later than start time
                 throw new IllegalValueException(DateTime.MESSAGE_DATETIME_START_LATER_THAN_END);
             }
@@ -124,13 +168,12 @@ public class ListTagCommandParser {
         private DateTime end = null;
 
         DateQualifier(DateTime start, DateTime end) {
-            assert start != null || end != null;
+            assert end != null;
             if (start != null) {
                 this.start = start;
             }
-            if (end != null) {
-                this.end = end;
-            }
+            this.end = end;
+
         }
 
         @Override
@@ -140,13 +183,16 @@ public class ListTagCommandParser {
                 if (task.getEndDate() == null) {
                     return true;
                 }
-                if (start == null) {
-                    return end.isLater(task.getEndDate());
+                if (task.getStartDate() == null && task.getEndDate() != null) {
+                    return end.isLater(task.getEndDate()) || end.equals(task.getEndDate());
                 }
-                if (end == null) {
-                    task.getStartDate().isLater(start);
+                if (task.getStartDate() != null && task.getEndDate() != null) {
+                    if (start != null) {
+                        return (end.isLater(task.getEndDate()) || end.equals(task.getEndDate()))
+                            && (task.getStartDate().isLater(start) || task.getStartDate().equals(start));
+                    }
+                    return end.isLater(task.getEndDate()) || end.equals(task.getEndDate());
                 }
-                return end.isLater(task.getEndDate()) && task.getStartDate().isLater(start);
             }
             return false;
         }
