--- a/collated/main/A0141077L.md
+++ b/collated/main/A0141077L.md
@@ -32,10 +32,11 @@ public class MarkCommand extends Command {
             + "Parameters: INDEX (must be a positive integer) [MORE_INDICES]...\n"
             + "Example: " + COMMAND_WORD + " 1 2";
 
-    private static final String MESSAGE_INCOMPLETE_EXECUTION = "Not all tasks sucessfully marked.";
+    public static final String MESSAGE_DUPLICATE_INDICES = "Duplicate indices are not allowed.";
+    public static final String MESSAGE_INCOMPLETE_EXECUTION = "Not all tasks sucessfully marked.";
     public static final String MESSAGE_INDEX_OUT_OF_BOUNDS = "The task index provided is out of bounds.";
     public static final String MESSAGE_MARK_TASK_SUCCESSFUL = "Task #%1$d completed: %2$s";
-    private static final String MESSAGE_MARK_TASK_UNSUCCESSFUL = "Task #%1$d unsuccessfully marked as complete.";
+    public static final String MESSAGE_MARK_TASK_UNSUCCESSFUL = "Task #%1$d unsuccessfully marked as complete.";
     public static final String MESSAGE_STATUS_ALREADY_DONE = "The task status is already set to Done.";
 
     private int[] filteredTaskListIndices;
@@ -270,6 +271,7 @@ public class MarkCommandParser {
         try {
             getOptionalIntArrayFromString(args);
             checkValidIndices();
+            checkForDuplicateIndices();
             sortIntArray();
         } catch (IllegalValueException ive) {
             return new IncorrectCommand(ive.getMessage());
@@ -293,6 +295,16 @@ public class MarkCommandParser {
             if (filteredTaskListIndices[i] == NEGATIVE_NUMBER) {
                 throw new IllegalValueException(MESSAGE_INVALID_TASK_DISPLAYED_INDEX + '\n' +
                         MarkCommand.MESSAGE_USAGE);
+            }
+        }
+    }
+
+    private void checkForDuplicateIndices() throws IllegalValueException {
+        List<Integer> indicesAsInteger = Ints.asList(filteredTaskListIndices);
+        Set<Integer> indicesHashSet = new HashSet<Integer>();
+        for (Integer index : indicesAsInteger) {
+            if (!indicesHashSet.add(index)) {
+                throw new IllegalValueException(MarkCommand.MESSAGE_DUPLICATE_INDICES);
             }
         }
     }
@@ -443,11 +455,11 @@ public class SaveAsCommandParser {
  * TaskStatus can be either Undone, Ongoing, Done or Overdue.
  */
 public enum TaskStatus {
-    UNDONE("Undone"), ONGOING("Ongoing"), DONE("Done"), OVERDUE("Overdue");
+    UNDONE("Undone"), ONGOING("Ongoing"), DONE("Done"), OVERDUE("OVERDUE");
 
     private final String status;
 
-    private TaskStatus (final String text) {
+    private TaskStatus (String text) {
         this.status = text;
     }
 
