--- a/collated/main/A0139845R.md
+++ b/collated/main/A0139845R.md
@@ -18,6 +18,7 @@
         try {
             model.updateFilteredListToShowAll();
             model.addTask(undoAdd);
+            selectLastTask();
         } catch (DuplicateTaskException e) {
 
         }
@@ -219,6 +220,7 @@ public class UndoCommand extends Command {
         case "mark":
         case "unmark":
             commandHistory.push(command);
+            break;
         default:
             break;
         }
@@ -242,6 +244,24 @@ public class UndoCommand extends Command {
     @Override
     public void clearRedo() {
         this.undoneHistory.clear();
+    }
+
+```
+###### \java\seedu\watodo\model\task\Task.java
+``` java
+    /* Constructs a Floating Task object from a given description. With Status */
+    public Task(Description description, UniqueTagList tags, TaskStatus newStatus) {
+        this(description, null, null, tags, newStatus, TaskType.FLOAT);
+    }
+
+    /* Constructs a Deadline Task object from a given description. With status. */
+    public Task(Description description, DateTime deadline, UniqueTagList tags, TaskStatus newStatus) {
+        this(description, null, deadline, tags, newStatus, TaskType.DEADLINE);
+    }
+
+    /* Constructs an Event Task object from a given description. With status */
+    public Task(Description description, DateTime startDate, DateTime endDate, UniqueTagList tags, TaskStatus status) {
+        this(description, startDate, endDate, tags, status, TaskType.EVENT);
     }
 
 ```
