--- a/collated/main/A0147980U.md
+++ b/collated/main/A0147980U.md
@@ -1016,14 +1016,17 @@ public class RemoveAliasCommandParser {
     private void handleKeyPressedInNavigationMode(KeyEvent event) {
         event.consume();
         if (event.getCode() == KeyCode.J) {
+        	// press J to move down by one
             if (currentIndex + 1 < logic.getFilteredTaskList().size()) {
                 currentIndex++;
             }
         } else if (event.getCode() == KeyCode.K) {
+        	// press K to move up by one
             if (currentIndex - 1 >= 0) {
                 currentIndex--;
             }
         } else if (event.getCode() == KeyCode.ESCAPE) {
+        	// press ESCAPE to toggle to EDITING mode and remove highlight
             currentIndex = -1;
             turnOnEditingMode();
         }
@@ -1048,10 +1051,10 @@ public class RemoveAliasCommandParser {
         } else if (event.getCode() == KeyCode.TAB) {  // auto complete
             event.consume();
             completeWithSelectedSuggestion();
-        } else if (undoKeys.match(event)) {  // use control+z and control+y to execute undo and re-do operation
+        } else if (undoKeys.match(event)) {  // use control+z to execute undo operation
             event.consume();
             handleCtrlZKeyCombination();
-        } else if (redoKeys.match(event)) {
+        } else if (redoKeys.match(event)) {  // use control+y to execute re-do operaton
             event.consume();
             handleCtrlYKeyCombination();
         }
