--- a/collated/main/A0135998H.md
+++ b/collated/main/A0135998H.md
@@ -1,6 +1,7 @@
 # A0135998H
 ###### /java/onlythree/imanager/commons/events/model/ViewListChangedEvent.java
 ``` java
+/** Indicates the task tab in the model has changed*/
 public class ViewListChangedEvent extends BaseEvent {
 
     public final String typeOfListView;
@@ -549,6 +550,9 @@ public class MainWindow extends UiPart<Region> {
 ```
 ###### /java/onlythree/imanager/ui/TaskCard.java
 ``` java
+/**
+ * A ui container that stores a task's information displayed in the task list panel.
+ */
 public class TaskCard extends UiPart<Region> {
 
     private static final String FXML = "TaskListCard.fxml";
@@ -559,8 +563,10 @@ public class TaskCard extends UiPart<Region> {
     private Label name;
     @FXML
     private Label id;
+    /* a UI container storing the startDate and endDate labels */
     @FXML
     private HBox startEndDateContainer;
+    /* a UI container storing the deadline label */
     @FXML
     private HBox deadlineContainer;
     @FXML
